RESOLVED FIXED135385
[CSSRegions] Assertion failure hit testing a region-based multicolumn in a region
https://bugs.webkit.org/show_bug.cgi?id=135385
Summary [CSSRegions] Assertion failure hit testing a region-based multicolumn in a re...
Mihnea Ovidenie
Reported 2014-07-29 07:20:54 PDT
Assertion failure hit testing a region-based multicolumn in a region
Attachments
Patch (5.00 KB, patch)
2014-07-29 07:35 PDT, Mihnea Ovidenie
no flags
Mihnea Ovidenie
Comment 1 2014-07-29 07:35:52 PDT
Andrei Bucur
Comment 2 2014-07-29 07:37:44 PDT
Comment on attachment 235689 [details] Patch r=me
WebKit Commit Bot
Comment 3 2014-07-29 08:11:46 PDT
Comment on attachment 235689 [details] Patch Clearing flags on attachment: 235689 Committed r171745: <http://trac.webkit.org/changeset/171745>
WebKit Commit Bot
Comment 4 2014-07-29 08:11:50 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.